# Sasha_projects_prog

Java/first programms/1/01/: T_01.java
Java/first programms/1/02/: T_02.java
Java/first programms/1/03/: Makefile  T_03.java
Java/first programms/1/04/: Makefile
Java/first programms/1/06/: T_06.java
Java/first programms/1/09/: T_09.java
c/solo projects/cat/: Makefile  Readme.md
c/solo projects/grep/: Readme.md
c/solo projects/matrix/: Readme.md
c/team projects/decimal lib/: Readme.md
c/team projects/math.h lib/: Readme.md
c/team projects/string.h lib/: Readme.md
cpp/solo projects/snake game/: Makefile  Readme.md  snake_game.pro
cpp/team projects/3D viewer+/: CMakeLists.txt  Doxyfile  Makefile  Readme.md  getDirectory.h  main.h  mainwindow.cc  mainwindow.h  mainwindow.ui
cpp/team projects/3D viewer+/backend/: affine.cc  model.cc  model.h  object.cc  object.h  s21_matrix.cc  s21_matrix.h
cpp/team projects/3D viewer+/controller/: controller.cc  controller.h
cpp/team projects/3D viewer+/test/: model.cc  test.h
cpp/team projects/3D viewer+/view/: glview.cc  glview.h
cpp/team projects/containers+/: Makefile  s21_containers.h
cpp/team projects/containers+/all_tests/: test_array.cc  test_list.cc  test_main.cc  test_map.cc  test_queue.cc  test_set.cc  test_stack.cc  test_vector.cc
cpp/team projects/containers+/array/: s21_array.h
cpp/team projects/containers+/list/: s21_list.h
cpp/team projects/containers+/map/: s21_map.h
cpp/team projects/containers+/queue/: s21_queue.h
cpp/team projects/containers+/set/: s21_set.h
cpp/team projects/containers+/stack/: s21_stack.h
cpp/team projects/containers+/tree/: tree.h
cpp/team projects/containers+/vector/: s21_vector.h
first programms/1/00/: Makefile  T_00.java
first programms/1/01/: Makefile
first programms/1/02/: Makefile
first programms/1/04/: T_04.java
first programms/1/05/: Makefile  T_05.java
first programms/1/06/: Makefile
first programms/1/07/: Makefile  T_07.java
first programms/1/08/: Makefile  T_08.java
first programms/1/09/: Makefile  User.java
(+3 files in other folders)
